--- a/index.html
+++ b/index.html
@@ -771,7 +771,6 @@ const POINTS_WITH_IMAGE = [
   "鳥羽水族館（ラッコのメイちゃん）",
   "イチョウ並木（大台町小滝）",
   "翠波橋",
-
   "長浜大橋",
   "亀ヶ池温泉",
   "三崎港",
@@ -782,22 +781,31 @@ const POINTS_WITH_IMAGE = [
   "🔴太宰府天満宮",
   "宮地嶽神社「光の道」",
   "🔴焼きカレー（門司港）",
-
-  // ===== 今回追加 =====
   "🔴猟師の天然ジビエ いとう",
   "🔴柿の葉すし",
   "🔴高野山奥之院",
   "🔴金刀比羅宮",
   "🔴山上銀杏園",
-  "ゴール🎉"
+  "ゴール🎉",
+  "ふたみシーサイド公園",
+  "三里松原",
+  "季節の花畑",
+  "瓦そば柳屋",
+  "山﨑八幡宮",
+  "錦帯橋",
+  "筆の里工房",
+  "鼻繰り島（厳島神社を望む）",
+  "たけはら町並み保存地区",
+  "三原城跡",
+  "鞆の浦",
+  "倉敷美観地区",
+  "フルーツパーラー",
+  "備前市美術館"
+
 ];
 
 
 const POINT_DETAILS = {
-
-  // =============================
-  // （既存定義はそのまま）
-  // =============================
 
   "マッテルモン": {
     title: "マッテルモン",
@@ -1029,11 +1037,6 @@ const POINT_DETAILS = {
     autoClose: null
   },
 
-
-  // =============================
-  // ===== 今回追加分 =====
-  // =============================
-
   "🔴猟師の天然ジビエ いとう": {
     title: "🔴猟師の天然ジビエ いとう",
     img: "gibie.png",
@@ -1092,7 +1095,147 @@ const POINT_DETAILS = {
     歩き続けた距離が、あなたの旅になりました。
   `,
   autoClose: null
-}
+  },
+
+  "ふたみシーサイド公園": {
+    title: "ふたみシーサイド公園",
+    img: "futami.png",
+    text: `
+      潮の香りを感じながら進みます。<br>
+      海が近い道は、気持ちも少し軽くしてくれます。
+    `,
+    autoClose: null
+  },
+
+  "三里松原": {
+    title: "三里松原",
+    img: "misato.png",
+    text: `
+      松林を抜ける風を感じます。<br>
+      足取りは、もう自分のリズムです。
+    `,
+    autoClose: null
+  },
+
+  "季節の花畑": {
+    title: "季節の花畑",
+    img: "hanabateke.png",
+    text: `
+      季節の色が目に入ります。<br>
+      足を進めながら、景色を楽しみましょう。
+    `,
+    autoClose: null
+  },
+
+  "瓦そば柳屋": {
+    title: "瓦そば柳屋",
+    img: "yanagiya.png",
+    text: `
+      瀬戸内の風に、瓦そばの香り。<br>
+      流れる区間を進んでいます。
+    `,
+    autoClose: null
+  },
+
+  "山﨑八幡宮": {
+    title: "山﨑八幡宮",
+    img: "yamasaki.png",
+    text: `
+      静かな境内を通り過ぎます。<br>
+      今日の歩みをそっと整える場所です。
+    `,
+    autoClose: null
+  },
+
+  "錦帯橋": {
+    title: "錦帯橋",
+    img: "kintaikyo.png",
+    text: `
+      美しい橋を眺めながら進みます。<br>
+      景色が、自然と歩調を整えてくれます。
+    `,
+    autoClose: null
+  },
+
+  "鼻繰り島（厳島神社を望む）": {
+    title: "鼻繰り島（厳島神社を望む）",
+    img: "miyajima.png",
+    text: `
+      対岸に広がる景色を横目に。<br>
+      海と祈りの気配が、そっと寄り添います。
+    `,
+    autoClose: null
+  },
+
+  "筆の里工房": {
+    title: "筆の里工房",
+    img: "fudenosato.png",
+    text: `
+      筆づくりの町を通過。<br>
+      積み重ねることの大切さを、静かに感じます。
+    `,
+    autoClose: null
+  },
+
+  "たけはら町並み保存地区": {
+    title: "たけはら町並み保存地区",
+    img: "takehara.png",
+    text: `
+      落ち着いた町並みを眺めながら。<br>
+      時間の流れが、少し緩やかになります。
+    `,
+    autoClose: null
+  },
+
+  "三原城跡": {
+    title: "三原城跡",
+    img: "miharasiro.png",
+    text: `
+      城跡を横に見て進みます。<br>
+      今日も確かな距離です。
+    `,
+    autoClose: null
+  },
+
+  "鞆の浦": {
+    title: "鞆の浦",
+    img: "tomonoura.png",
+    text: `
+      港町の景色を眺めながら。<br>
+      次の道へ向かう気持ちが、自然と整います。
+    `,
+    autoClose: null
+  },
+
+  "倉敷美観地区": {
+    title: "倉敷美観地区",
+    img: "kurashiki.png",
+    text: `
+      白壁の町並みを横目に。<br>
+      景色とともに進みました。
+    `,
+    autoClose: null
+  },
+
+  "フルーツパーラー": {
+    title: "フルーツパーラー",
+    img: "pafe.png",
+    text: `
+      甘いひとときで、ひと休み。<br>
+      歩き続ける力が、また戻ってきます。
+    `,
+    autoClose: null
+  },
+
+  "備前市美術館": {
+    title: "備前市美術館",
+    img: "bizen.png",
+    text: `
+      静かな空間を思い浮かべて。<br>
+      感覚を整えながら、次へ向かいます。
+    `,
+    autoClose: null
+  }
 
 };
 
